--- a/other.pug
+++ b/other.pug
@@ -53,7 +53,7 @@ html(lang="en-us")
         ul
           +entry("https://www.youtube.com/watch?v=PWvPEEpLCT0&feature=youtu.be&t=55", "Smart-city VR diorama") with:
             ul
-              +entry("https://www.youtube.com/watch?v=gdiIqyTl_Kk", "Traffic simulation") with #[+offsite("https://www.youtube.com/watch?v=awmEM5jbZAk") night-time dependent effects]
+              +entry("https://www.youtube.com/watch?v=gdiIqyTl_Kk", "Traffic simulation") a simple traffic animation with #[+offsite("https://www.youtube.com/watch?v=awmEM5jbZAk") night-time dependent effects]
               +entry("https://www.youtube.com/watch?v=XL__CsW_L7A", "Power grid simulation")
               +entry("https://www.youtube.com/watch?v=90hJ4h-rwk0", "Day/night cycle for time-series simulation in games")
           +entry("https://www.youtube.com/watch?v=xSSL8WqZT6o", "Music beat detection") for #[+offsite("https://www.youtube.com/watch?v=K_HJtNlNsmg&feature=youtu.be&t=20") game-play synchronization]
@@ -79,16 +79,16 @@ html(lang="en-us")
         ul
           +entry("https://github.com/capnmidnight/pliny", "Pliny: a live-documentation system for JavaScript projects")
           +entry("https://www.youtube.com/watch?v=9_6_w-dXVw0", "Electron/WebRTC app for screen sharing and web app collaboration")
-          +entry("https://www.bloomberg.com/news/articles/2016-12-06/goldman-sachs-alum-turns-to-virtual-reality-to-sell-57-million-mansion", "REX") : 360° Real Estate Tours
-          +entry("yabs.html", "No More Jabber Yabs") : A game about the consequences of following orders.
-          +entry("http://www.highlandfrs.com", "Highland Solutions") : a consultancy for helping people wrangle their data
+          +entry("https://www.bloomberg.com/news/articles/2016-12-06/goldman-sachs-alum-turns-to-virtual-reality-to-sell-57-million-mansion", "REX") 360° Real Estate Tours
+          +entry("yabs.html", "No More Jabber Yabs") A game about the consequences of following orders.
+          +entry("http://www.highlandfrs.com", "Highland Solutions") a consultancy for helping people wrangle their data
           +entry("https://www.youtube.com/watch?v=5SXsu_MEzmU", "Genetic algorithm visualizer")
-          +entry("https://www.justwritedammit.com/", "Just Write, Dammit!") :  A book writing platform
-          +entry("https://www.youtube.com/watch?v=KcDqzLGkre4&feature=youtu.be&t=43", "Rieker CARS") : DOT-compliant road sign recommendations
-          +entry("https://github.com/capnmidnight/small-town", "Small Town") : interactive fiction + AI Shakespere
-          +entry("https://github.com/capnmidnight/SqlSiphon", "SqlSiphon") : a database management library for .NET
+          +entry("https://www.justwritedammit.com/", "Just Write, Dammit!")  A book writing platform
+          +entry("https://www.youtube.com/watch?v=KcDqzLGkre4&feature=youtu.be&t=43", "Rieker CARS") DOT-compliant road sign recommendations
+          +entry("https://github.com/capnmidnight/small-town", "Small Town") interactive fiction + AI Shakespere
+          +entry("https://github.com/capnmidnight/SqlSiphon", "SqlSiphon") a database management library for .NET
           +entry("pong/", "Mobile-responsive Pong game")
-          +entry("synth/", "Scratch Live!") : An HTML 5 synthesizer
+          +entry("synth/", "Scratch Live!") An HTML 5 synthesizer
 
         h3 Photography and Writing
         ul
