--- a/vr.pug
+++ b/vr.pug
@@ -35,6 +35,8 @@ html(lang="en-us")
           +entry("https://www.oculus.com/quest/", "Oculus Quest") Rapidly becoming my favorite headset. Untethered plus boundless tracking is min-spec, in my mind.
           +entry("https://www.oculus.com/rift-s/", "Oculus Rift S") Just received, I haven't taken it out of the box yet.
           +entry("https://www.oculus.com/go/", "Oculus Go") A fine 3DOF headset at an incredible price.
+          +entry("https://www.oculus.com/rift", "Oculus Rift CV1") I don't really like this headset. I think it was a lackluster release from a company that hyped it up way too much. At the time it came out, I bought an HTC Vive instead. But I now have a Rift CV1 to round out the library.
+          +entry("https://www.samsung.com/global/galaxy/gear-vr/", "Samsung Gear VR") I have a SM-R324 version, with the motion controller, of the Gear VR (the last white version they distrubeted) with a Samsung Galaxy S8 to run in it. This was the first mobile VR headset I used on a regular basis, and even bought my father one for his phone.
           +entry("https://www.samsung.com/us/computing/hmd/windows-mixed-reality/hmd-odyssey-windows-mixed-reality-headset-xe800zba-hc1us/", "Samsung Odyssey+") Just received, I haven't taken it out of the box yet.
           +entry("https://www8.hp.com/us/en/campaigns/mixedrealityheadset/overview.html", "HP Windows Mixed Reality Headset") Often my go-to headset, for ergonmics, ease of setup, and quality of visuals.
           +entry("https://www.magicleap.com/magic-leap-one", "Magic Leap One: Creator Edition") I have my own Magic Leap One, which I consider to be the best AR headset that you can actually buy. Unfortunately, the Microsoft HoloLens devices have become incredibly impossible to acquire.
@@ -43,7 +45,7 @@ html(lang="en-us")
           +entry("https://www.vive.com/us/product/vive-virtual-reality-system/", "HTC Vive") My standard Vive is equipped with the #[+offsite("https://www.vive.com/us/vive-deluxe-audio-strap/") Deluxe Audio Strap] and the #[+offsite("https://www.tpcastvr.com/store/TPCAST-Wireless-Adapter-for-VIVE-p93101456") TPCAST Wireless Adapater]. I also have two #[+offsite("https://www.vive.com/us/vive-tracker/") Vive Trackers] with hand straps.
           +entry("https://enterprise.vive.com/us/vivefocus/", "Vive Focus") It's not my favorite headset, but there are some interesting enterprise capabilities around device management that could make it a decent consideration.
           +entry("https://vr.google.com/daydream/", "Google Daydream") I have a Daydream View 2 with a Google Pixel 2 smartphone. The smartphone is my daily-driver. I have two standard 3DOF controllers for it.
-          +entry("https://www.samsung.com/global/galaxy/gear-vr/", "Samsung Gear VR") I have a SM-R324 version, with the motion controller, of the Gear VR (the last white version they distrubeted) with a Samsung Galaxy S8 to run in it. This was the first mobile VR headset I used on a regular basis, and even bought my father one for his phone.
+          +entry("https://www.apple.com/ipad-9.7/", "Apple iPad (2017) 9.7\"") This is the current model of regular iPad, as of this writing. It comes with the A10 chipset, which is compatible with ARKit.
           +entry("https://vr.google.com/cardboard/", "Google Cardboard") I easily have a dozen different "dumb" slot-in-smartphone headsets, both purchased and of my own creation.
           +entry("https://developer.oculus.com/blog/open-source-release-of-rift-dk2/", "Oculus Rift DK2") I still have my first "real" VR headset.
           +entry("https://store.intelrealsense.com/buy-intel-realsense-tracking-camera-t265.html", "Intel RealSense T265") This is the most recent tracking module that Intel offers in the RealSense line. I intend to build my own "audio-only" headset with it.
@@ -55,8 +57,6 @@ html(lang="en-us")
         ul
           +entry("https://store.steampowered.com/valveindex", "Valve Index") Just waiting on my per-order to fulfill.
           +entry("https://pimaxvr.com/products/5kplus", "Pimax 5K Plus") Just wating on my order to fulfill.
-          +entry("https://www.apple.com/ipad-9.7/", "Apple iPad (2017) 9.7\"") This is the current model of regular iPad, as of this writing. It comes with the A10 chipset. Just waiting on my order to fulfill.
-          +entry("https://www.oculus.com/rift", "Oculus Rift CV1") Just waiting on my order to fulfill.
           +entry("https://www.microsoft.com/en-us/hololens/", "Microsoft HoloLens 2") Just wating for Microsoft to deem I'm worthy of a pre-order.
 
         h3 Wish-list
