--- a/vr.pug
+++ b/vr.pug
@@ -55,14 +55,14 @@ html(lang="en-us")
         h3 In process
         p These are headsets that I've ordered and are just waiting to receive.
         ul
+          +entry("https://www.microsoft.com/en-us/p/microsoft-hololens-development-edition", "Microsoft HoloLens 1") The device is starting to get a bit long-in-the-tooth, but I also think its capabilities have yet to be fully tapped in any extant applications. Just waiting on an eBay order to ship.
+          +entry("https://www.microsoft.com/en-us/hololens/", "Microsoft HoloLens 2") Just wating for Microsoft to deem I'm worthy of a pre-order.
           +entry("https://store.steampowered.com/valveindex", "Valve Index") Just waiting on my per-order to fulfill.
           +entry("https://pimaxvr.com/products/5kplus", "Pimax 5K Plus") Just wating on my order to fulfill.
-          +entry("https://www.microsoft.com/en-us/hololens/", "Microsoft HoloLens 2") Just wating for Microsoft to deem I'm worthy of a pre-order.
 
         h3 Wish-list
         p These are headsets that I'd be willing to buy, for the right price, but may not have any particular need for, given the other headsets I own. Listed by order of interest:
         ul
-          +entry("https://www.microsoft.com/en-us/p/microsoft-hololens-development-edition", "Microsoft HoloLens 1") I'm waiting on an eBay auction for one, as they are currently listed as "out of stock". Again, if you're looking to offload one, please #[a(href="mailto:sean@seanmcbeth.com?Subject=Microsoft\ HoloLens\ 1") email me].
           +entry("https://www.playstation.com/en-us/explore/playstation-vr/", "PlayStation VR") I don't have a PlayStation 4, but if I had a PSVR, I would buy one. Please #[a(href="mailto:sean@seanmcbeth.com?Subject=Pico\ Neo") email me] if you're looking to sell one.
           +entry("https://enterprise.vive.com/us/product/vive-pro-eye/", "HTC Vive Pro Eye") Once I get my Valve Index, and given the other headsets I have, I'm not too interested in buying one at full-freight. But if you have one, I'd #[a(href="mailto:sean@seanmcbeth.com?Subject=HTC\ Vive\ Pro") consider buying it] for the right price.
           +entry("https://www.vive.com/us/cosmos/", "Vive Cosmos") For the sake of completion, I might as well have one.
