push the menu to the left side of the screen

--- a/vr.pug
+++ b/vr.pug
@@ -31,26 +31,37 @@ html(lang="en-us")
 
         h3 Available
         p These are headsets that I currently own and have on-hand.
+        
+        h4 Tethered PC Virtual Reality
         ul
-          +entry("https://www.oculus.com/quest/", "Oculus Quest") Rapidly becoming my favorite headset. Untethered plus boundless tracking is min-spec, in my mind.
+          +entry("https://www.vive.com/us/product/vive-virtual-reality-system/", "HTC Vive") My standard Vive is equipped with the #[+offsite("https://www.vive.com/us/vive-deluxe-audio-strap/") Deluxe Audio Strap] and the #[+offsite("https://www.tpcastvr.com/store/TPCAST-Wireless-Adapter-for-VIVE-p93101456") TPCAST Wireless Adapater]. I also have two #[+offsite("https://www.vive.com/us/vive-tracker/") Vive Trackers] with hand straps.
+          +entry("https://www.samsung.com/us/computing/hmd/windows-mixed-reality/hmd-odyssey-windows-mixed-reality-headset-xe800zba-hc1us/", "Samsung Odyssey+") Just received, I haven't taken it out of the box yet.
+          +entry("https://www8.hp.com/us/en/campaigns/mixedrealityheadset/overview.html", "HP Windows Mixed Reality Headset") Often my go-to headset, for ergonmics, ease of setup, and quality of visuals.
           +entry("https://www.oculus.com/rift-s/", "Oculus Rift S") Just received, I haven't taken it out of the box yet.
           +entry("https://www.oculus.com/go/", "Oculus Go") A fine 3DOF headset at an incredible price.
           +entry("https://www.oculus.com/rift", "Oculus Rift CV1") I don't really like this headset. I think it was a lackluster release from a company that hyped it up way too much. At the time it came out, I bought an HTC Vive instead. But I now have a Rift CV1 to round out the library.
           +entry("https://www.samsung.com/global/galaxy/gear-vr/", "Samsung Gear VR") I have a SM-R324 version, with the motion controller, of the Gear VR (the last white version they distrubeted) with a Samsung Galaxy S8 to run in it. This was the first mobile VR headset I used on a regular basis, and even bought my father one for his phone.
-          +entry("https://www.samsung.com/us/computing/hmd/windows-mixed-reality/hmd-odyssey-windows-mixed-reality-headset-xe800zba-hc1us/", "Samsung Odyssey+") Just received, I haven't taken it out of the box yet.
-          +entry("https://www8.hp.com/us/en/campaigns/mixedrealityheadset/overview.html", "HP Windows Mixed Reality Headset") Often my go-to headset, for ergonmics, ease of setup, and quality of visuals.
-          +entry("https://www.magicleap.com/magic-leap-one", "Magic Leap One: Creator Edition") I have my own Magic Leap One, which I consider to be the best AR headset that you can actually buy. Unfortunately, the Microsoft HoloLens devices have become incredibly impossible to acquire.
+          +entry("https://developer.oculus.com/blog/open-source-release-of-rift-dk2/", "Oculus Rift DK2") I still have my first "real" VR headset.
+
+        h4 Mobile Virtual Reality
+        ul
+          +entry("https://www.oculus.com/quest/", "Oculus Quest") Rapidly becoming my favorite headset. Untethered plus boundless tracking is min-spec, in my mind.
           +entry("https://www.lenovo.com/us/en/virtual-reality-and-smart-devices/virtual-and-augmented-reality/lenovo-mirage-solo/Mirage-Solo/p/ZZIRZRHVR01", "Lenovo Mirage Solo") I wish this headset had delayed to include the 6DOF controllers. It's an excellent headset, and I enjoy working in the Daydream ecosystem.
           +entry("https://en.wikipedia.org/wiki/Pixel_2", "Google Pixel 2") I have a Google Pixel 2 for ARCore projects. It is my daily-driver phone.
-          +entry("https://www.vive.com/us/product/vive-virtual-reality-system/", "HTC Vive") My standard Vive is equipped with the #[+offsite("https://www.vive.com/us/vive-deluxe-audio-strap/") Deluxe Audio Strap] and the #[+offsite("https://www.tpcastvr.com/store/TPCAST-Wireless-Adapter-for-VIVE-p93101456") TPCAST Wireless Adapater]. I also have two #[+offsite("https://www.vive.com/us/vive-tracker/") Vive Trackers] with hand straps.
-          +entry("https://enterprise.vive.com/us/vivefocus/", "Vive Focus") It's not my favorite headset, but there are some interesting enterprise capabilities around device management that could make it a decent consideration.
           +entry("https://vr.google.com/daydream/", "Google Daydream") I have a Daydream View 2 with a Google Pixel 2 smartphone. The smartphone is my daily-driver. I have two standard 3DOF controllers for it.
-          +entry("https://www.apple.com/ipad-9.7/", "Apple iPad (2017) 9.7\"") This is the current model of regular iPad, as of this writing. It comes with the A10 chipset, which is compatible with ARKit.
+          +entry("https://enterprise.vive.com/us/vivefocus/", "Vive Focus") It's not my favorite headset, but there are some interesting enterprise capabilities around device management that could make it a decent consideration.
           +entry("https://vr.google.com/cardboard/", "Google Cardboard") I easily have a dozen different "dumb" slot-in-smartphone headsets, both purchased and of my own creation.
-          +entry("https://developer.oculus.com/blog/open-source-release-of-rift-dk2/", "Oculus Rift DK2") I still have my first "real" VR headset.
+          li #[em Pico Neo DK] I have a Pico Neo dev-kit, which is a 3DOF headset with a gamepad controlller. It's interesting from a historical perspective.
+
+        h4 Augmented Reality
+        ul
+          +entry("https://www.magicleap.com/magic-leap-one", "Magic Leap One: Creator Edition") I have my own Magic Leap One, which I consider to be the best AR headset that you can actually buy. Unfortunately, the Microsoft HoloLens devices have become incredibly impossible to acquire.
+          +entry("https://www.apple.com/ipad-9.7/", "Apple iPad (2017) 9.7\"") This is the current model of regular iPad, as of this writing. It comes with the A10 chipset, which is compatible with ARKit.
+
+        h4 Other devices
+        ul
           +entry("https://store.intelrealsense.com/buy-intel-realsense-tracking-camera-t265.html", "Intel RealSense T265") This is the most recent tracking module that Intel offers in the RealSense line. I intend to build my own "audio-only" headset with it.
           +entry("https://www.intelrealsense.com/depth-camera-d435i/", "Intel RealSense D435i") This is the most recent 3D mapping module that Intel offers in the RealSense line. I intend to build a hand-held 3D scanning device with it.
-          li #[em Pico Neo DK] I have a Pico Neo dev-kit, which is a 3DOF headset with a gamepad controlller. It's interesting from a historical perspective.
 
         h3 In process
         p These are headsets that I've ordered and are just waiting to receive.
