--- a/vr.pug
+++ b/vr.pug
@@ -63,6 +63,7 @@ html(lang="en-us")
           +entry("https://store.intelrealsense.com/buy-intel-realsense-tracking-camera-t265.html", "Intel RealSense T265") This is the most recent tracking module that Intel offers in the RealSense line. I intend to build my own "audio-only" headset with it.
           +entry("https://www.intelrealsense.com/depth-camera-d435i/", "Intel RealSense D435i") This is the most recent 3D mapping module that Intel offers in the RealSense line. I intend to build a hand-held 3D scanning device with it.
           +entry("https://store.neurosky.com/pages/mindwave", "NeuroSky MindWave") This is a brainwave sensing device that gives applications a sense of the level of concentration a user is applying to a task, or their level of calmness/anxiety. It's relatively inexpensive and really easy to use, so I'm investigating using it as a means of controlling parameters in selection systems, either to making picking of small objects easier/more precise, or scaling back difficulty level during periods of high anxiety.
+          +entry("https://www.leapmotion.com/technology/", "Leap Motion") I have one of the Leap Motion PC Developer Kits, with various mounts I've designed with Sugru for better hand tracking when attached to a VR headset.
 
         h3 In process
         p These are headsets that I've ordered and are just waiting to receive.
