--- a/vr.pug
+++ b/vr.pug
@@ -72,6 +72,7 @@ html(lang="en-us")
           +entry("https://www.microsoft.com/en-us/hololens/", "Microsoft HoloLens 2") Just wating for Microsoft to deem I'm worthy of a pre-order.
           +entry("https://store.steampowered.com/valveindex", "Valve Index") Just waiting on my per-order to fulfill.
           +entry("https://pimaxvr.com/products/5kplus", "Pimax 5K Plus") Just wating on my order to fulfill.
+          +entry("https://www.nreal.ai/", "nreal light") This is a really interesting AR headset that tethers to smartphones. I'm waiting to see if I get approved for their developer program.
 
         h3 Wish-list
         p These are headsets that I'd be willing to buy, for the right price, but may not have any particular need for, given the other headsets I own. Listed by order of interest:
