--- a/vr.pug
+++ b/vr.pug
@@ -64,6 +64,8 @@ html(lang="en-us")
           +entry("https://www.intelrealsense.com/depth-camera-d435i/", "Intel RealSense D435i") This is the most recent 3D mapping module that Intel offers in the RealSense line. I intend to build a hand-held 3D scanning device with it.
           +entry("https://store.neurosky.com/pages/mindwave", "NeuroSky MindWave") This is a brainwave sensing device that gives applications a sense of the level of concentration a user is applying to a task, or their level of calmness/anxiety. It's relatively inexpensive and really easy to use, so I'm investigating using it as a means of controlling parameters in selection systems, either to making picking of small objects easier/more precise, or scaling back difficulty level during periods of high anxiety.
           +entry("https://www.leapmotion.com/technology/", "Leap Motion") I have one of the Leap Motion PC Developer Kits, with various mounts I've designed with Sugru for better hand tracking when attached to a VR headset.
+          +entry("https://en.wikipedia.org/wiki/Kinect#Kinect_for_Xbox_One_(2013)", "Kinext for Xbox One") I have the V2 Kinect, with the necessary cables for attaching to a PC instead of an Xbox One.
+          +entry("https://en.wikipedia.org/wiki/Kinect#Kinect_for_Windows_(2012)", "Microsoft Kinect for Windows") I have the V1 Kinect, with the necessary cables for attaching to a PC instead of an Xbox 360.
 
         h3 In process
         p These are headsets that I've ordered and are just waiting to receive.
@@ -73,6 +75,7 @@ html(lang="en-us")
           +entry("https://store.steampowered.com/valveindex", "Valve Index") Just waiting on my per-order to fulfill.
           +entry("https://pimaxvr.com/products/5kplus", "Pimax 5K Plus") Just wating on my order to fulfill.
           +entry("https://www.nreal.ai/", "nreal light") This is a really interesting AR headset that tethers to smartphones. I'm waiting to see if I get approved for their developer program.
+          +entry("https://www.microsoft.com/en-us/p/azure-kinect-dk/", "Azure Kinect DK") I have the Kinect with Azure services on pre-order.
 
         h3 Wish-list
         p These are headsets that I'd be willing to buy, for the right price, but may not have any particular need for, given the other headsets I own. Listed by order of interest:
