received hololens and ordered vive pro

--- a/vr.pug
+++ b/vr.pug
@@ -56,6 +56,7 @@ html(lang="en-us")
         h4 Augmented Reality
         ul
           +entry("https://www.magicleap.com/magic-leap-one", "Magic Leap One: Creator Edition") I have my own Magic Leap One, which I consider to be the best AR headset that you can actually buy. Unfortunately, the Microsoft HoloLens devices have become incredibly impossible to acquire.
+          +entry("https://www.microsoft.com/en-us/p/microsoft-hololens-development-edition", "Microsoft HoloLens 1") The device is starting to get a bit long-in-the-tooth, but I also think its capabilities have yet to be fully tapped in any extant applications.
           +entry("https://www.apple.com/ipad-9.7/", "Apple iPad (2017) 9.7\"") This is the current model of regular iPad, as of this writing. It comes with the A10 chipset, which is compatible with ARKit.
 
         h4 Other devices
@@ -70,7 +71,7 @@ html(lang="en-us")
         h3 In process
         p These are headsets that I've ordered and are just waiting to receive.
         ul
-          +entry("https://www.microsoft.com/en-us/p/microsoft-hololens-development-edition", "Microsoft HoloLens 1") The device is starting to get a bit long-in-the-tooth, but I also think its capabilities have yet to be fully tapped in any extant applications. Just waiting on an eBay order to ship.
+          +entry("https://enterprise.vive.com/us/product/vive-pro-eye/", "HTC Vive Pro Eye") I'm interested in playing with the eye tracking. Just waiting on my order to fulfill.
           +entry("https://www.microsoft.com/en-us/hololens/", "Microsoft HoloLens 2") Just wating for Microsoft to deem I'm worthy of a pre-order.
           +entry("https://store.steampowered.com/valveindex", "Valve Index") Just waiting on my per-order to fulfill.
           +entry("https://pimaxvr.com/products/5kplus", "Pimax 5K Plus") Just wating on my order to fulfill.
@@ -81,7 +82,6 @@ html(lang="en-us")
         p These are headsets that I'd be willing to buy, for the right price, but may not have any particular need for, given the other headsets I own. Listed by order of interest:
         ul
           +entry("https://www.playstation.com/en-us/explore/playstation-vr/", "PlayStation VR") I don't have a PlayStation 4, but if I had a PSVR, I would buy one. Please #[a(href="mailto:sean@seanmcbeth.com?Subject=Pico\ Neo") email me] if you're looking to sell one.
-          +entry("https://enterprise.vive.com/us/product/vive-pro-eye/", "HTC Vive Pro Eye") Once I get my Valve Index, and given the other headsets I have, I'm not too interested in buying one at full-freight. But if you have one, I'd #[a(href="mailto:sean@seanmcbeth.com?Subject=HTC\ Vive\ Pro") consider buying it] for the right price.
           +entry("https://www.vive.com/us/cosmos/", "Vive Cosmos") For the sake of completion, I might as well have one.
           +entry("https://www.pico-interactive.com/neo", "Pico Neo") With the Oculus Quest release, these look a tad expensive now. I might pick one up in the near future, but if you have one you're looking to offload, please #[a(href="mailto:sean@seanmcbeth.com?Subject=Pico\ Neo") email me].
           +entry("https://www.pico-interactive.com/g2-4k", "Pico Goblin 2") Again, these aren't so desirable from a technology standpoint given the other headsets available in the market, but having one would be a good addition to my library. If you have a standard Pico G2 or a Pico G2 4K that you're looking to offload, please #[a(href="mailto:sean@seanmcbeth.com?Subject=Pico\ G2") email me].
