--- a/vr.pug
+++ b/vr.pug
@@ -37,7 +37,9 @@ html(lang="en-us")
           +entry("https://www.samsung.com/us/computing/hmd/windows-mixed-reality/hmd-odyssey-windows-mixed-reality-headset-xe800zba-hc1us/", "Samsung Odyssey+") Just received, I haven't taken it out of the box yet.
           +entry("https://www8.hp.com/us/en/campaigns/mixedrealityheadset/overview.html", "HP Windows Mixed Reality Headset") Often my go-to headset, for ergonmics, ease of setup, and quality of visuals.
           +entry("https://www.vive.com/us/product/vive-virtual-reality-system/", "HTC Vive") My standard Vive is equipped with the #[+offsite("https://www.vive.com/us/vive-deluxe-audio-strap/") Deluxe Audio Strap] and the #[+offsite("https://www.tpcastvr.com/store/TPCAST-Wireless-Adapter-for-VIVE-p93101456") TPCAST Wireless Adapater]. I also have two #[+offsite("https://www.vive.com/us/vive-tracker/") Vive Trackers] with hand straps.
-          +entry("https://enterprise.vive.com/us/product/vive-pro-eye/", "HTC Vive Pro Eye") I'm interested in playing with the eye tracking. Just waiting on my order to fulfill.
+          +entry("https://enterprise.vive.com/us/product/vive-pro-eye/", "HTC Vive Pro Eye") I'm interested in playing with the eye tracking.
+          +entry("https://store.steampowered.com/valveindex", "Valve Index") Just arrived, haven't done anything with it yet.
+          +entry("https://pimaxvr.com/products/5kplus", "Pimax 5K Plus") Just arrived, haven't done anything with it yet.
           +entry("https://www.oculus.com/rift-s/", "Oculus Rift S") Just received, I haven't taken it out of the box yet.
           +entry("https://www.oculus.com/rift", "Oculus Rift CV1") I don't really like this headset. I think it was a lackluster release from a company that hyped it up way too much. At the time it came out, I bought an HTC Vive instead. But I now have a Rift CV1 to round out the library.
           +entry("https://developer.oculus.com/blog/open-source-release-of-rift-dk2/", "Oculus Rift DK2") I still have my first "real" VR headset.
@@ -66,6 +68,7 @@ html(lang="en-us")
           +entry("https://www.intelrealsense.com/depth-camera-d435i/", "Intel RealSense D435i") This is the most recent 3D mapping module that Intel offers in the RealSense line. I intend to build a hand-held 3D scanning device with it.
           +entry("https://store.neurosky.com/pages/mindwave", "NeuroSky MindWave") This is a brainwave sensing device that gives applications a sense of the level of concentration a user is applying to a task, or their level of calmness/anxiety. It's relatively inexpensive and really easy to use, so I'm investigating using it as a means of controlling parameters in selection systems, either to making picking of small objects easier/more precise, or scaling back difficulty level during periods of high anxiety.
           +entry("https://www.leapmotion.com/technology/", "Leap Motion") I have one of the Leap Motion PC Developer Kits, with various mounts I've designed with Sugru for better hand tracking when attached to a VR headset.
+          +entry("https://www.microsoft.com/en-us/p/azure-kinect-dk/", "Azure Kinect DK") Depth+RGB camera data, though the package is significantly bigger than the Intel RealSense cameras (even if you combine the T265 and D435i into one box to have similar functionality).
           +entry("https://en.wikipedia.org/wiki/Kinect#Kinect_for_Xbox_One_(2013)", "Kinect for Xbox One") I have the V2 Kinect, with the necessary cables for attaching to a PC instead of an Xbox One.
           +entry("https://en.wikipedia.org/wiki/Kinect#Kinect_for_Windows_(2012)", "Microsoft Kinect for Windows") I have the V1 Kinect, with the necessary cables for attaching to a PC instead of an Xbox 360.
 
@@ -73,10 +76,7 @@ html(lang="en-us")
         p These are headsets that I've ordered and are just waiting to receive.
         ul
           +entry("https://www.microsoft.com/en-us/hololens/", "Microsoft HoloLens 2") Just wating for Microsoft to deem I'm worthy of a pre-order.
-          +entry("https://store.steampowered.com/valveindex", "Valve Index") Just waiting on my per-order to fulfill.
-          +entry("https://pimaxvr.com/products/5kplus", "Pimax 5K Plus") Just wating on my order to fulfill.
           +entry("https://www.nreal.ai/", "nreal light") This is a really interesting AR headset that tethers to smartphones. I'm waiting to see if I get approved for their developer program.
-          +entry("https://www.microsoft.com/en-us/p/azure-kinect-dk/", "Azure Kinect DK") I have the Kinect with Azure services on pre-order.
 
         h3 Wish-list
         p These are headsets that I'd be willing to buy, for the right price, but may not have any particular need for, given the other headsets I own. Listed by order of interest:
