add project code link to website

--- a/index.pug
+++ b/index.pug
@@ -68,6 +68,12 @@ html(lang="en-us")
 
       section#bonafides
 
+        section#notes
+          h2: a(name="notes") notes
+          p These are notes for people I've told to come to my website recently.
+          ul
+            +entry("GoogleCardboardLand.zip", "GoogleCardboardLand") This is the code we are using for our VR session on 2019-08-04.
+
         section#projects
           h2: a(name="projects") Projects
           p These are some of my current side-projects. For more information on my VR and AR capabilities, please see #[a(href="vr.html") my XR devices page].
